Install mocha and supertest

--- a/package.json
+++ b/package.json
@@ -22,5 +22,9 @@
   "homepage": "https://github.com/gaupoit/ivisualife",
   "dependencies": {
     "express": "^4.12.4"
+  },
+  "devDependencies": {
+    "mocha": "^2.2.5",
+    "supertest": "^1.0.1"
   }
 }
