--- a/public/bower.json
+++ b/public/bower.json
@@ -29,6 +29,7 @@
     "moment": "~2.10.2",
     "mathjs": "~1.5.2",
     "angular-chart.js": "~0.6.0",
-    "jquery": "~2.1.3"
+    "jquery": "~2.1.4",
+    "ng-curtain": "~0.1.1"
   }
 }
