Fix piechart in curtain

--- a/public/bower.json
+++ b/public/bower.json
@@ -30,6 +30,7 @@
     "mathjs": "~1.5.2",
     "angular-chart.js": "~0.6.0",
     "jquery": "~2.1.4",
-    "ng-curtain": "~0.1.1"
+    "ng-curtain": "~0.1.1",
+    "lodash": "~3.9.3"
   }
 }
