--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -11,6 +11,12 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
 
   # Every Vagrant virtual environment requires a box to build off of.
   config.vm.box = "jayunit100/centos7"
+  config.vm.provision :shell, :path => "bootstrap.sh"
+
+  #Configure synced_folder
+  config.vm.synced_folder "../../ivisualife", "/var/www/ivisualife", owner: "vagrant",
+   group: "vagrant", mount_options: ["dmode=777,fmode=777"]
+
 
   # Disable automatic box update checking. If you disable this, then
   # boxes will only be checked for updates when the user runs
@@ -20,11 +26,11 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
   # Create a forwarded port mapping which allows access to a specific port
   # within the machine from a port on the host machine. In the example below,
   # accessing "localhost:8080" will access port 80 on the guest machine.
-  config.vm.network "forwarded_port", guest: 80, host: 8080
+  # config.vm.network "forwarded_port", guest: 80, host: 80
 
   # Create a private network, which allows host-only access to the machine
   # using a specific IP.
-  config.vm.network "private_network", ip: "192.168.18.11"
+  config.vm.network "private_network", ip: "192.168.33.11"
 
   # Create a public network, which generally matched to bridged network.
   # Bridged networks make the machine appear as another physical device on
@@ -39,30 +45,23 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
   # the path on the host to the actual folder. The second argument is
   # the path on the guest to mount the folder. And the optional third
   # argument is a set of non-required options.
-  config.vm.synced_folder "../", "/var/www/ivisualife", owner: "vagrant", group: "vagrant",
-    mount_options: ["dmode=777,fmode=777"]
-
-  config.vm.provision :shell, :path => "bootstrap.sh" 
+  # config.vm.synced_folder "../data", "/vagrant_data"
 
   # Provider-specific configuration so you can fine-tune various
   # backing providers for Vagrant. These expose provider-specific options.
   # Example for VirtualBox:
   #
-  # config.vm.provider "virtualbox" do |vb|
-  #   # Don't boot with headless mode
+   config.vm.provider "virtualbox" do |vb|
+     # Don't boot with headless mode
   #   vb.gui = true
   #
-  #   # Use VBoxManage to customize the VM. For example to change memory:
-  #   vb.customize ["modifyvm", :id, "--memory", "1024"]
-  # end
+    # Use VBoxManage to customize the VM. For example to change memory:
+   vb.customize ["modifyvm", :id, "--memory", "1024"]
+   end
   #
   # View the documentation for the provider you're using for more
   # information on available options.
-  config.vm.provider :virtualbox do |vb|
-    vb.auto_nat_dns_proxy = false
-    vb.customize ["modifyvm", :id, "--natdnsproxy1", "off" ]
-    vb.customize ["modifyvm", :id, "--natdnshostresolver1", "off" ]
-  end
+
   # Enable provisioning with CFEngine. CFEngine Community packages are
   # automatically installed. For example, configure the host as a
   # policy server and optionally a policy file to run:
@@ -127,3 +126,4 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
   #
   #   chef.validation_client_name = "ORGNAME-validator"
 end
+
