--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
   "dependencies": {
     "body-parser": "^1.12.4",
     "bower": "^1.4.1",
+    "chai": "^3.0.0",
+    "chai-spies": "^0.6.0",
     "express": "^4.13.0",
     "lodash": "^3.9.3",
     "moment": "^2.10.3",
@@ -30,6 +32,7 @@
     "request": "^2.58.0"
   },
   "devDependencies": {
+    "chai-spies": "^0.6.0",
     "mocha": "^2.2.5",
     "supertest": "^1.0.1"
   }
