--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Talk about your life",
   "main": "app.js",
   "scripts": {
-    "test": "mocha"
+    "test": "mocha --reporter spec test/**/*.js",
+    "ci-test": "istanbul cover _mocha -- -R spec 'test/**/*Spec.js' > test.mocha && istanbul report clover"
   },
   "repository": {
     "type": "git",
@@ -33,7 +34,9 @@
   },
   "devDependencies": {
     "chai-spies": "^0.6.0",
+    "istanbul": "^0.3.17",
     "mocha": "^2.2.5",
-    "supertest": "^1.0.1"
+    "supertest": "^1.0.1",
+    "tape": "^4.0.0"
   }
 }
