--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "lodash": "^3.9.3",
     "moment": "^2.10.3",
     "mongoose": "^4.0.5",
-    "request": "^2.58.0"
+    "request": "^2.58.0",
+    "xml2js": "~0.4.9"
   },
   "devDependencies": {
     "chai-spies": "^0.6.0",
