--- a/public/bower.json
+++ b/public/bower.json
@@ -31,6 +31,8 @@
     "angular-chart.js": "~0.6.0",
     "jquery": "~2.1.4",
     "ng-curtain": "~0.1.1",
-    "lodash": "~3.9.3"
+    "lodash": "~3.9.3",
+    "highcharts-ng": "~0.0.8",
+    "highcharts-release": "~4.1.7"
   }
 }
