- Temporary make a lot of request from client side for population ranking chart - Need to optimize by caching by date and make request from sever side

--- a/public/bower.json
+++ b/public/bower.json
@@ -33,6 +33,7 @@
     "ng-curtain": "~0.1.1",
     "lodash": "~3.9.3",
     "highcharts-ng": "~0.0.8",
-    "highcharts-release": "~4.1.7"
+    "highcharts-release": "~4.1.7",
+    "async": "~1.4.0"
   }
 }
